# OpenFLORA

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: LIMITS.md
examples/lenet_pynq/: README.md  demands.csv  expected_pblocks.txt  expected_result.json
src/openflora/: __init__.py  bitparse.py  cli.py  device.py  emit.py  frames.py  milp.py
src/openflora/devices/: xc7z020.json
tests/: conftest.py  test_emit.py  test_frames.py  test_solve.py  test_wirelength.py
tools/: build_device_model.py  probe_geometry.tcl
